# HukukTakip

./: .gitignore  Dockerfile  README.md  build_apk_docker.bat  build_apk_wsl.sh  buildozer.spec  fix_wsl.sh  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
